force-app/main/default/objects/Account/fields/New_City_3__c.field-meta.xml
<CustomField>
    <fullName>New_City_3__c</fullName>
    <label>New City 3</label>
    <length>18</length>
    <type>Text</type>
</CustomField>