force-app/main/default/objects/Account/fields/Sample_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Sample_Picklist__c</fullName>
    <label>Sample Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A / B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>