force-app/main/default/objects/Account/fields/Sample_Text__c.field-meta.xml
<CustomField>
    <fullName>Sample_Text__c</fullName>
    <label>Sample Text</label>
    <length>18</length>
    <type>Text</type>
</CustomField>