force-app/main/default/objects/Account/fields/Test_Ignore__c.field-meta.xml
<CustomField>
    <fullName>Test_Ignore__c</fullName>
    <label>Test Ignore</label>
    <length>100</length>
    <type>Text</type>
</CustomField>