force-app/main/default/objects/Account/fields/Test_Sample_Field_2__c.field-meta.xml
<CustomField>
    <fullName>Test_Sample_Field_2__c</fullName>
    <label>Test Sample Field 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>