force-app/main/default/objects/Account/recordTypes/Sample_Account.recordType-meta.xml
<RecordType>
    <fullName>Sample_Account</fullName>
    <active>true</active>
    <description>Sample Account for Recording</description>
    <label>Sample Account</label>
</RecordType>